fixed photobanner width on mobile

--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ h1, h2{
     font-family: "Noto Sans", sans-serif;
 }
 .photoBanner h1{
+    text-align: center;
     z-index: 0;
     color: #f2f2f2;
 }
@@ -220,7 +221,7 @@ h1, h2{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 200px;
+    height: 145px;
     margin-top: 15px;
     border-top: #2c2c2c solid 2px;
     border-bottom: #2c2c2c solid 2px;
@@ -286,5 +287,8 @@ h1, h2{
     .photoBanner img{
     height: auto;
     width: 100%;
+    }
+    .photoBanner{
+        height: 250px;
     }
 }
